--- a/site/pages/tela_de_cadastro.html
+++ b/site/pages/tela_de_cadastro.html
@@ -20,7 +20,6 @@
         <form id="cadastro_form">
             <div id="header">
                 <h1>CADASTRO</h1>
-            <i id="icon_modo" class="fa-solid fa-moon"></i>
         </div>
         <div id="div_input">
                 <div class="input-box">
@@ -51,7 +50,7 @@
                             
                 </div>
             </div>
-            <button type="button" onclick="cadastrar()">Cadastrar</button>
+            <button type="button" onclick="cadastrar()" id="btn_cadastro">Cadastrar</button>
     </form>
     </div>
 </main>
