--- a/site/pages/dashboard.html
+++ b/site/pages/dashboard.html
@@ -27,15 +27,14 @@
             <div class="lateral">
                 <ul>
                     <li>
-                        <a href="#">
-                            <i><img src="../imgs - Home/icons/plantar.png" alt=""></i>
-                            <!-- <select name="" id="">
-                                <option value="">Plantação 1</option>
-                                <option value="">Plantação 2</option>
-                                <option value="">Plantação 3</option>
-                            </select> -->
-                            <div>Plantação</div>
-                        </a>
+                        
+                            <i><img src="../imgs - Home/icons/plantar.png" style="width: 24px; height: 24px; margin-left: 26px;"></i>
+                            <select id="listaPlant">
+                                <option value="#" selected disabled>Selecione uma plantação</option>
+                                <option value="1" onselect="selecionarPlant(), atlGrafico(), plotar()">Plantação 1</option>
+                                <option value="2" onselect="selecionarPlant(), atlGrafico(), plotar()">Plantação 2</option>
+                              </select>
+                        
                     </li>
                     <li>
                         <a href="#">
@@ -105,11 +104,11 @@
                 <div class="chart">
                     <div class="grafico">
                         <h2>Média de umidade por mês</h2>
-                        <canvas id="chart1"></canvas>
+                        <canvas id="Mychart"></canvas>
                     </div>
                     <div class="grafico">
                         <h2>Gravidade dos Alertas</h2>
-                        <canvas id="chart2"></canvas>
+                        <canvas id="Mychart2"></canvas>
                     </div>
                 </div>
             </div>
@@ -119,6 +118,393 @@
 
 </html>
 <script>
+
+let listaEmpresasCadastradas = [];
+
+function listar() {
+  fetch("/empresas/listar", {
+    method: "GET",
+  })
+    .then(function (resposta) {
+      resposta.json().then((empresas) => {
+        empresas.forEach((empresa) => {
+          listaEmpresasCadastradas.push(empresa);
+
+          console.log("listaEmpresasCadastradas");
+          console.log(listaEmpresasCadastradas[0].codigo_ativacao);
+        });
+      });
+    })
+    .catch(function (resposta) {
+      console.log(`#ERRO: ${resposta}`);
+    });
+}
+
+// Funções de seleção front end
+
+function destroier_of_alerts() {
+  // div_alerta.classList.add("aparecer");
+  div_alerta.style.display = "none";
+}
+
+function alertar_umi() {
+  var umidade = "Umidade Alta";
+  // var idEmpresaVincular
+
+  for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
+    idEmpresaVincular = listaEmpresasCadastradas[i].idEmpresa;
+  }
+
+  div_alerta.style.display = "flex";
+  // div_alerta.classList.remove("aparecer");
+  // div_alerta.querySelector(".p_sit").textContent = "Umidade alta!";
+  div_alerta.innerHTML = `
+      <img
+        src="../imagens/alerta.png"
+        style="height: 30px; width: 30px"
+        alt=""
+      />
+      <p id="p_sit">Umidade Alta</p>
+      <button id="btn_alerta" onclick="destroier_of_alerts()">OK</button>`;
+
+  fetch("/usuarios/alertar_umi", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      umiServer: umidade,
+      idEmpresaVincularServer: idEmpresaVincular,
+    }),
+  })
+    .then(function (resposta) {
+      console.log("resposta: ", resposta);
+    })
+    .catch(function (erro) {
+      console.error("Erro ao enviar dados:", erro);
+      alert("Erro ao tentar realizar o cadastro. Tente novamente.");
+    });
+}
+function alertar_desumi() {
+  var umidade = "Umidade Baixa";
+  // var idEmpresaVincular
+
+  for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
+    idEmpresaVincular = listaEmpresasCadastradas[i].idEmpresa;
+  }
+
+  div_alerta.style.display = "flex";
+  // div_alerta.classList.remove("aparecer");
+  // div_alerta.querySelector(".p_sit").textContent = "Umidade alta!";
+  div_alerta.innerHTML = `
+      <img
+        src="../imagens/alerta.png"
+        style="height: 30px; width: 30px"
+        alt=""
+      />
+      <p id="p_sit">Umidade Baixa</p>
+      <button id="btn_alerta" onclick="destroier_of_alerts()">OK</button>`;
+
+  fetch("/usuarios/alertar_desumi", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      umiServer: umidade,
+      idEmpresaVincularServer: idEmpresaVincular,
+    }),
+  })
+    .then(function (resposta) {
+      console.log("resposta: ", resposta);
+    })
+    .catch(function (erro) {
+      console.error("Erro ao enviar dados:", erro);
+      alert("Erro ao tentar realizar o cadastro. Tente novamente.");
+    });
+}
+
+let proximaAtualizacao;
+var umidade = [];
+var dtHora = [];
+var umidade2 = [];
+var dtHora2 = [];
+
+function selecionarPlant() {
+  var lista = listaPlant.value;
+
+  if (lista == 1) {
+    document.getElementById("plantacao1").style.display = "flex";
+    document.getElementById("plantacao2").style.display = "none";
+  } else if (lista == 2) {
+    document.getElementById("plantacao1").style.display = "none";
+    document.getElementById("plantacao2").style.display = "flex";
+  }
+
+}
+
+function plantacao1() {
+  document.getElementById("selecionarPlantacao").style.display = "none";
+  document.getElementById("plantacao2").style.display = "none";
+  document.getElementById("plantacao1").style.display = "flex";
+}
+
+function plantacao2() {
+  document.getElementById("selecionarPlantacao").style.display = "none";
+  document.getElementById("plantacao2").style.display = "flex";
+  document.getElementById("plantacao1").style.display = "none";
+}
+
+function graficoMensal() {
+  document.getElementById("graficoMensalPlant1").style.display = "none";
+  document.getElementById("graficoDiarioPlant1").style.display = "flex";
+}
+
+function graficoDiario() {
+  document.getElementById("graficoMensalPlant1").style.display = "flex";
+  document.getElementById("graficoDiarioPlant1").style.display = "none";
+}
+
+function graficoMensal2() {
+  document.getElementById("graficoMensalPlant2").style.display = "none";
+  document.getElementById("graficoDiarioPlant2").style.display = "flex";
+}
+
+function graficoDiario2() {
+  document.getElementById("graficoMensalPlant2").style.display = "flex";
+  document.getElementById("graficoDiarioPlant2").style.display = "none";
+}
+
+
+var ctx = new Chart(document.getElementById("myChart"), {
+  type: "line",
+  data: {
+    labels: dtHora,
+    datasets: [
+      {
+        label: "#Atual",
+        data: umidade,
+        borderWidth: 1,
+      },
+    ],
+  },
+  options: {
+    scales: {
+      y: {
+        beginAtZero: true,
+      },
+    },
+  },
+});
+
+var ctx2 = new Chart(document.getElementById("myChart2"), {
+  type: "bar",
+  data: {
+    labels: dtHora,
+    datasets: [
+      {
+        label: "#Mensal",
+        data: umidade,
+        borderWidth: 1,
+      },
+    ],
+  },
+  options: {
+    scales: {
+      y: {
+        beginAtZero: true,
+      },
+    },
+  },
+});
+
+var ctx3 = new Chart(document.getElementById("myChart3"), {
+  type: "line",
+  data: {
+    labels: dtHora,
+    datasets: [
+      {
+        label: "#Atual",
+        data: umidade,
+        borderWidth: 1,
+      },
+    ],
+  },
+  options: {
+    scales: {
+      y: {
+        beginAtZero: true,
+      },
+    },
+  },
+});
+
+var ctx4 = new Chart(document.getElementById("myChart4"), {
+  type: "bar",
+  data: {
+    labels: dtHora,
+    datasets: [
+      {
+        label: "#Mensal",
+        data: umidade,
+        borderWidth: 1,
+      },
+    ],
+  },
+  options: {
+    scales: {
+      y: {
+        beginAtZero: true,
+      },
+    },
+  },
+});
+
+
+function plotar() {
+  var idPLANTACAO = Number(listaPlant.value);
+
+  fetch("/usuarios/plotar", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      idPLANTACAO: idPLANTACAO,
+    }),
+  })
+    .then(function (resposta) {
+      console.log("resposta: ", resposta);
+
+      if (resposta.ok) {
+      }
+    })
+    .catch(function (resposta) {
+      console.log(`#ERRO: ${resposta}`);
+      finalizarAguardar();
+    });
+
+  fetch(`/usuarios/plotar`, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      idPLANTACAO: idPLANTACAO,
+    }),
+  })
+    .then((resposta) => {
+      resposta
+        .json()
+        .then((dados) => {
+          "";
+          umidade = [];
+          dtHora = [];
+          for (var i = 0; i < dados.length; i++) {
+            console.log(dados[i].dadoSensor, dados[i].dtRegistro);
+            umidade.push(dados[i].dadoSensor);
+            dtHora.push(dados[i].dtRegistro);
+          }
+          var ultima_posicao = umidade[0];
+          if (ultima_posicao > 80) {
+            alertar_umi();
+          } else if (ultima_posicao < 60) {
+            alertar_desumi();
+          }
+          var umidadeReversa = umidade.reverse();
+          var dtHoraReversa = dtHora.reverse();
+
+          ctx.data.datasets[0].data = umidadeReversa;
+          ctx.data.labels = dtHoraReversa;
+          ctx.update();
+        })
+        .catch((erro) => {
+          console.log(erro);
+        });
+    })
+    .catch((erro) => {
+      console.log(erro);
+    });
+
+  // if (proximaAtualizacao != undefined) {
+  //       clearTimeout(proximaAtualizacao);
+  //   }
+}
+
+function plotar2() {
+  var idPLANTACAO = Number(listaPlant.value);
+
+  fetch("/usuarios/plotar2", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      idPLANTACAO: idPLANTACAO,
+    }),
+  })
+    .then(function (resposta) {
+      console.log("resposta: ", resposta);
+
+      if (resposta.ok) {
+      }
+    })
+    .catch(function (resposta) {
+      console.log(`#ERRO: ${resposta}`);
+      finalizarAguardar();
+    });
+
+  fetch(`/usuarios/plotar2`, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      idPLANTACAO: idPLANTACAO,
+    }),
+  })
+    .then((resposta) => {
+      resposta
+        .json()
+        .then((dados) => {
+          "";
+          umidade2 = [];
+          dtHora2 = [];
+          for (var i = 0; i < dados.length; i++) {
+            console.log(dados[i].dadoSensor, dados[i].dtRegistro);
+            umidade2.push(dados[i].dadoSensor);
+            dtHora2.push(dados[i].dtRegistro);
+          }
+          var ultima_posicao = umidade2[0];
+          if (ultima_posicao > 80) {
+            alertar_umi();
+          } else if (ultima_posicao < 60) {
+            alertar_desumi();
+          }
+          var umidadeReversa = umidade2.reverse();
+          var dtHoraReversa = dtHora2.reverse();
+
+          ctx2.data.datasets[0].data = umidadeReversa;
+          ctx2.data.labels = dtHoraReversa;
+          ctx2.update();
+        })
+        .catch((erro) => {
+          console.log(erro);
+        });
+    })
+    .catch((erro) => {
+      console.log(erro);
+    });
+
+  // if (proximaAtualizacao != undefined) {
+  //       clearTimeout(proximaAtualizacao);
+  //   }
+}
+
+function atlGrafico() {
+  proximaAtualizacao = setInterval(() => plotar(), 7000);
+}
+
     const ctx1 = document.getElementById('chart1').getContext('2d');
     new Chart(ctx1, {
         type: 'line',
