home- sobre nós

--- a/site/pages/sobrenos.html
+++ b/site/pages/sobrenos.html
@@ -33,9 +33,30 @@
         </div>
     </header>
     <section class="sobreNos">
-        <img src="../imagens/404 Error.gif" alt="Error 404" class="error">
-    </section>
+        <div class="esquerda"></div>
+        <div class="direita">
+            <div class="logo">
+                <img src="../imgs - Home/icons/ww icon.png" alt="">
+            </div>
+            <div class="texto">
+                <h1>SOBRE NÓS</h1>
 
+                <p>Fundada em 2024, a WaterWorks nasceu com o propósito de transformar a forma como o agronegócio lida
+                    com
+                    os desafios diários. Somos especializados no desenvolvimento e comercialização de sensores
+                    inteligentes
+                    que monitoram a umidade do solo em plantações de café.</p>
+                <p>Nossa missão é capacitar os produtores com tecnologia de ponta, permitindo decisões mais assertivas e
+                    sustentáveis. Com nossos sensores, os agricultores têm acesso a dados precisos e em tempo real,
+                    otimizando a irrigação, economizando recursos naturais e melhorando a qualidade das colheitas.</p>
+                <p>Na WaterWorks, acreditamos que inovação e sustentabilidade andam de mãos dadas. Por isso, trabalhamos
+                    para criar soluções acessíveis e eficazes que beneficiem não só os produtores, mas também o meio
+                    ambiente. Estamos comprometidos em ser parceiros de confiança no crescimento do setor cafeeiro,
+                    impulsionando a produtividade e a rentabilidade de forma responsável e eficiente.</p>
+            </div>
+        </div>
+        <!-- <img src="../imagens/404 Error.gif" alt="Error 404" class="error"> -->
+    </section>
 </body>
 
 </html>
