--- a/site/pages/calculadoraWaterWorksV3.html
+++ b/site/pages/calculadoraWaterWorksV3.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculadora de Sensores - Water Works</title>
-    <link rel="stylesheet" href="../css/estiloCalculadora.css" />
-  </head>
-  <header>
-    <h2>WaterWorks</h2>
-    <menu>
-      <li><a href="../index.html">HOME</a></li>
-      <li><a href="calculadoraWaterWorksV3.html">SIMULADOR</a></li>
-    </menu>
-    <menu>
-      <li><a href="./login.html">LOGIN</a></li>
-      <li>
-        <b style="color: #0a8cbf"
-          ><a href="./tela_de_cadastro.html">CADASTRO</a></b
-        >
-      </li>
-    </menu>
-  </header>
-  <body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WaterWorks | Soluções de Monitoramento de Umidade para Café</title>
+    <link rel="stylesheet" href="../css/estiloCalculadora.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="../imgs - Home/icons/ww icon.png" type="img/png">
+</head>
+
+<body>
+    <header>
+        <div class="logoWW">
+            <a href="../index.html#banner">
+                <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
+                <li>ater Works</li>
+            </a>
+        </div>
+        <div class="opcoes">
+            <li><a href="../index.html#simulador">Simulador</a></li>
+            <li><a href="../index.html#tecnologia">Tecnologia</a></li>
+            <li><a href="../index.html#dashboard">Dashboard</a></li>
+            <li><a href="../pages/monitoramento.html">Monitoramento</a></li>
+            <li><a href="../pages/sobrenos.html">Sobre nós</a></li>
+        </div>
+        <div class="entrar">
+            <a href="../pages/login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
+        </div>
+    </header>
     <div class="lugar">
       <div class="calculadora">
         <h1>Simule Aqui!</h1>
