--- a/site/pages/monitoramento.html
+++ b/site/pages/monitoramento.html
@@ -22,9 +22,9 @@
             </a>
         </div>
         <div class="opcoes">
-            <li><a href="./index.html#simulador">Simulador</a></li>
-            <li><a href="./index.html#tecnologia">Tecnologia</a></li>
-            <li><a href="./index.html#dashboard">Dashboard</a></li>
+            <li><a href="../index.html#simulador">Simulador</a></li>
+            <li><a href="../index.html#tecnologia">Tecnologia</a></li>
+            <li><a href="../index.html#dashboard">Dashboard</a></li>
             <li><a href="./monitoramento.html">Monitoramento</a></li>
             <li><a href="./sobrenos.html">Sobre nós</a></li>
         </div>
