Modelo da nova dash finalizado com as funções do backend

--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -89,7 +89,7 @@ function entrar() {
                     sessionStorage.ID_USUARIO = json.id;
                     sessionStorage.FK_EMRRESA = json.fkempresa;
 
-                        window.location = "./dash.html";
+                        window.location = "./novaDashboard.html";
 
                 });
 
