link para download - manual de instalação

--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,8 @@
             <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
         </div>
         <div class="entrar">
-            <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
+            <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"
+                    alt=""></a>
         </div>
     </header>
     <section class="banner" id="banner">
@@ -157,9 +158,15 @@
                 <li><a href="#simulador">Simulador</a></li>
                 <li><a href="#tecnologia">Tecnologia</a></li>
                 <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="./monitoramento.html">Monitoramento</a></li>
-                <li><a href="./sobrenos.html">Sobre nós</a></li>
+                <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
+                <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
             </div>
+            <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.pdf">
+                <div class="download">
+                    <span>Manual de instalação</span>
+                    <img src="./imgs - Home/icons/download-da-nuvem.png" alt="">
+                </div>
+            </a>
         </div>
         <div class="redes">
             <div class="container">
