--- a/site/pages/novaDashboard.html
+++ b/site/pages/novaDashboard.html
@@ -12,7 +12,8 @@
     <script src="../js/sessao.js"></script>
 </head>
 
-<body onload="validarSessao(), listar()">
+<!-- <body onload="validarSessao(), listar()"> -->
+  <body>
     <div>
         <div class="container">
             <div class="barrinha">
@@ -63,7 +64,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://waterworks-help.freshdesk.com/support/home" target="_blank">
                             <i><img src="../imgs - Home/icons/apoio-suporte.png" alt=""></i>
                             <div>Abrir chamado</div>
                         </a>
