Dash com kpis responsivas e estilizada

--- a/site/index.html
+++ b/site/index.html
@@ -161,7 +161,7 @@
                 <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
                 <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
             </div>
-            <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.pdf">
+            <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.jpeg">
                 <div class="download">
                     <span>Manual de instalação</span>
                     <img src="./imgs - Home/icons/download-da-nuvem.png" alt="">
