--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -109,6 +109,7 @@ function entrar() {
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
                     sessionStorage.FK_EMRRESA = json.fkempresa;
+                    sessionStorage.EMP_NOME = json.empNome
 
                         window.location = "./novaDashboard.html";
 
