ajustes na home

--- a/site/index.html
+++ b/site/index.html
@@ -22,15 +22,20 @@
             </a>
         </div>
         <div class="opcoes">
-            <li><a href="#simulador">Simulador</a></li>
-            <li><a href="#tecnologia">Tecnologia</a></li>
-            <li><a href="#dashboard">Dashboard</a></li>
-            <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
-            <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
+            <li><a href="./pages/calculadoraWaterWorksV3.html">Simulador</a></li>
+            <li><a href="#tecnologia">Nossa Tecnologia</a></li>
+            <!-- <li><a href="#dashboard">Dashboard</a></li> -->
+            <li><a href="./pages/monitoramento.html">O que é Monitoramento?</a></li>
+            <li><a href="./pages/sobrenos.html">Sobre a WaterWorks</a></li>
         </div>
         <div class="entrar">
-            <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"
-                    alt=""></a>
+            <a href="./pages/login.html">
+                <div class="login">Login</div>
+            </a>
+            <a href="./pages/tela_de_cadastro.html">
+                <div class="registrar">Cadastrar</div>
+            </a>
+            <!-- <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"alt=""></a> -->
         </div>
     </header>
     <section class="banner" id="banner">
@@ -56,7 +61,7 @@
     </section>
     <section class="tecnologia" id="tecnologia">
         <div class="titulo">
-            <h1>NOSSA TECNOLOGIA</h1>
+            <h1>Conheça nossa Tecnologia</h1>
             <p>Utilizamos tecnologias confiáveis e acessíveis para garantir precisão e eficiência</p>
         </div>
         <div class="texto">
@@ -160,13 +165,13 @@
                 <li><a href="#dashboard">Dashboard</a></li>
                 <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
                 <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
+                <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.jpeg">
+                    <div class="download">
+                        <span>Manual de instalação</span>
+                        <img src="./imgs - Home/icons/download-da-nuvem.png" alt="">
+                    </div>
+                </a>
             </div>
-            <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.jpeg">
-                <div class="download">
-                    <span>Manual de instalação</span>
-                    <img src="./imgs - Home/icons/download-da-nuvem.png" alt="">
-                </div>
-            </a>
         </div>
         <div class="redes">
             <div class="container">
