--- a/site/pages/monitoramento.html
+++ b/site/pages/monitoramento.html
@@ -22,32 +22,44 @@
             </a>
         </div>
         <div class="opcoes">
-            <li><a href="../index.html#simulador">Simulador</a></li>
-            <li><a href="../index.html#tecnologia">Tecnologia</a></li>
-            <li><a href="../index.html#dashboard">Dashboard</a></li>
-            <li><a href="./monitoramento.html">Monitoramento</a></li>
-            <li><a href="./sobrenos.html">Sobre nós</a></li>
+            <li><a href="./calculadoraWaterWorksV3.html">Simulador</a></li>
+            <li><a href="../index.html#tecnologia">Nossa Tecnologia</a></li>
+            <!-- <li><a href="#dashboard">Dashboard</a></li> -->
+            <li><a href="./monitoramento.html">O que é Monitoramento?</a></li>
+            <li><a href="./sobrenos.html">Sobre a WaterWorks</a></li>
         </div>
         <div class="entrar">
-            <a href="./login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
+            <a href="./login.html">
+                <div class="login">Login</div>
+            </a>
+            <a href="./tela_de_cadastro.html">
+                <div class="registrar">Cadastrar</div>
+            </a>
+            <!-- <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"alt=""></a> -->
         </div>
     </header>
     <section class="oQueE" id="monitoramento">
         <div class="solo">
             <div class="texto">
                 <h1>O QUE É O MONITORAMENTO DE UMIDADE DE SOLO?</h1>
-                <p>O monitoramento da umidade do solo é uma técnica que permite acompanhar em tempo real a quantidade de água presente no solo de uma plantação. Essa prática é essencial para agricultores, pois oferece informações precisas que ajudam a tomar decisões estratégicas sobre irrigação e manejo hídrico, otimizando o uso da água e promovendo o crescimento saudável das plantas.</p>
+                <p>O monitoramento da umidade do solo é uma técnica que permite acompanhar em tempo real a quantidade de
+                    água presente no solo de uma plantação. Essa prática é essencial para agricultores, pois oferece
+                    informações precisas que ajudam a tomar decisões estratégicas sobre irrigação e manejo hídrico,
+                    otimizando o uso da água e promovendo o crescimento saudável das plantas.</p>
             </div>
             <div class="imagem"></div>
         </div>
         <div class="cafe">
             <div class="texto">
-                <p> No caso de plantações como o café, o monitoramento da umidade do solo é ainda mais importante, já que a irrigação inadequada pode impactar diretamente a qualidade dos grãos e a produtividade da lavoura.
+                <p> No caso de plantações como o café, o monitoramento da umidade do solo é ainda mais importante, já
+                    que a irrigação inadequada pode impactar diretamente a qualidade dos grãos e a produtividade da
+                    lavoura.
                 </p>
             </div>
             <div class="imagem"></div>
         </div>
     </section>
-    
+
 </body>
+
 </html>
