--- a/site/pages/sobrenos.html
+++ b/site/pages/sobrenos.html
@@ -22,14 +22,20 @@
             </a>
         </div>
         <div class="opcoes">
-            <li><a href="../index.html#simulador">Simulador</a></li>
-            <li><a href="../index.html#tecnologia">Tecnologia</a></li>
-            <li><a href="../index.html#dashboard">Dashboard</a></li>
-            <li><a href="./monitoramento.html">Monitoramento</a></li>
-            <li><a href="./sobrenos.html">Sobre nós</a></li>
+            <li><a href="./calculadoraWaterWorksV3.html">Simulador</a></li>
+            <li><a href="../index.html#tecnologia">Nossa Tecnologia</a></li>
+            <!-- <li><a href="#dashboard">Dashboard</a></li> -->
+            <li><a href="./monitoramento.html">O que é Monitoramento?</a></li>
+            <li><a href="./sobrenos.html">Sobre a WaterWorks</a></li>
         </div>
         <div class="entrar">
-            <a href="./login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
+            <a href="./login.html">
+                <div class="login">Login</div>
+            </a>
+            <a href="./tela_de_cadastro.html">
+                <div class="registrar">Cadastrar</div>
+            </a>
+            <!-- <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"alt=""></a> -->
         </div>
     </header>
     <section class="sobreNos">
