--- a/site/pages/calculadoraWaterWorksV3.html
+++ b/site/pages/calculadoraWaterWorksV3.html
@@ -14,24 +14,30 @@
 </head>
 
 <body>
-    <header>
-        <div class="logoWW">
-            <a href="../index.html#banner">
-                <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
-                <li>ater Works</li>
-            </a>
-        </div>
-        <div class="opcoes">
-            <li><a href="../index.html#simulador">Simulador</a></li>
-            <li><a href="../index.html#tecnologia">Tecnologia</a></li>
-            <li><a href="../index.html#dashboard">Dashboard</a></li>
-            <li><a href="../pages/monitoramento.html">Monitoramento</a></li>
-            <li><a href="../pages/sobrenos.html">Sobre nós</a></li>
-        </div>
-        <div class="entrar">
-            <a href="../pages/login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
-        </div>
-    </header>
+  <header>
+    <div class="logoWW">
+        <a href="../index.html#banner">
+            <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
+            <li>ater Works</li>
+        </a>
+    </div>
+    <div class="opcoes">
+        <li><a href="./calculadoraWaterWorksV3.html">Simulador</a></li>
+        <li><a href="../index.html#tecnologia">Nossa Tecnologia</a></li>
+        <!-- <li><a href="#dashboard">Dashboard</a></li> -->
+        <li><a href="./monitoramento.html">O que é Monitoramento?</a></li>
+        <li><a href="./sobrenos.html">Sobre a WaterWorks</a></li>
+    </div>
+    <div class="entrar">
+        <a href="./login.html">
+            <div class="login">Login</div>
+        </a>
+        <a href="./tela_de_cadastro.html">
+            <div class="registrar">Cadastrar</div>
+        </a>
+        <!-- <a href="./pages/login.html"><img src="./imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png"alt=""></a> -->
+    </div>
+</header>
     <div class="lugar">
       <div class="calculadora">
         <h1>Simule Aqui!</h1>
