--- a/site/index.html
+++ b/site/index.html
@@ -165,7 +165,7 @@
                 <li><a href="#dashboard">Dashboard</a></li>
                 <li><a href="./pages/monitoramento.html">Monitoramento</a></li>
                 <li><a href="./pages/sobrenos.html">Sobre nós</a></li>
-                <a href="./imgs - Home/fotoGuilherme.jpeg" download="Manual de instalação WW.jpeg">
+                <a href="./imgs - Home/Manual de instalação.pdf" download="Manual de instalação.pdf">
                     <div class="download">
                         <span>Manual de instalação</span>
                         <img src="./imgs - Home/icons/download-da-nuvem.png" alt="">
