--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -107,11 +107,11 @@ function entrar() {
                     console.log(JSON.stringify(json));
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.FK_EMRRESA = json.fkempresa;
+                    sessionStorage.ID_USUARIO = json.idUSER;
+                    sessionStorage.FK_EMPRESA = json.fkEmpresa;
                     sessionStorage.EMP_NOME = json.empNome
 
-                        window.location = "./novaDashboard.html";
+                        window.location = "./DashboardV2.html";
 
                 });
 
