--- a/site/pages/DashboardV2.html
+++ b/site/pages/DashboardV2.html
@@ -12,7 +12,7 @@
     <script src="../js/sessao.js"></script>
 </head>
 
-<body onload="validarSessao()">
+<body onload="validarSessao(), listarPlant()">
 
     <div>
 
@@ -21,7 +21,7 @@
             <div class="barrinha">
                 <div class="logo">
                     <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
-                    <h1>ater Works</h1>
+                    <h1>Water Works</h1>
                 </div>
                 <span id="b_empresa">Empresa</span>
                 <span id="b_usuario">Funcionário</span>
@@ -35,16 +35,15 @@
                     <li>
                         <a href="#" id="liSelectBtn">
                             <i><img src="../imgs - Home/icons/plantar.png" alt=""></i> <br>
-                            <select name="" id="listaPlant" onchange="iniciar()">
-                                <option value="1" selected>Plantação 1</option>
-                                <option value="2">Plantação 2</option>
+                            <select name="plantacoes" id="listaPlant" onchange="chamar(), kpiMaxMin(), mostrarGrafico(), atlGraficoDiario(), atlGraficoMensal()">
+                                <option value="#" selected>Selecione sua plantação</option>
                             </select>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <i><img src="../imgs - Home/icons/calendario-com-a-palavra-dia.png" alt=""></i>
-                            <button  class="btnMudarGrafico">
+                            <button  class="btnMudarGrafico" onclick="setGraficoDiario()">
                                 Gráfico Diário
                             </button>
                         </a>
@@ -52,7 +51,7 @@
                     <li>
                         <a href="#">
                             <i><img src="../imgs - Home/icons/calendario-mensal.png" alt=""></i>
-                            <button  class="btnMudarGrafico">
+                            <button  class="btnMudarGrafico" onclick="setGraficoMensal()">
                                 Gráfico Média Mensal
                             </button>
                         </a>
@@ -61,7 +60,7 @@
                         <a href="https://waterworks-help.freshdesk.com/support/home" target="_blank">
                             <i><img src="../imgs - Home/icons/apoio-suporte.png" alt=""></i>
                             <button class="btnMudarGrafico">
-                              Abrir Chamado
+                                Abrir Chamado
                             </button>
                         </a>
                     </li>
@@ -114,26 +113,26 @@
 
                 <div class="chart">
                     <div class="grafico">
-                        <section id="plantacao1" style="display: none">
-                            <div>
+                        <section id="graficos" style="display: none">
+                            <div id="divGraficoDiario">
                                 <div class="grafico">
                                     <h2>Monitoramento de Umidade de Solo em Tempo Real</h2>
-                                    <canvas id="graficoDiario"></canvas>
+                                    <canvas id="canvaGraficoDiario"></canvas>
                                 </div>
                             </div>
 
-                            <div style="display: none">
+                            <div id="divGraficoMensal" style="display: none">
                                 <div class="grafico">
                                     <h2>Histórico de Média de Umidade de Solo</h2>
-                                    <canvas id="graficoMedia"></canvas>
+                                    <canvas id="canvaGraficoMedia"></canvas>
                                 </div>
                             </div>
                         </section>
                     </div>
                     <div class="grafico" id="popUpAlerta">
-                          <h2>Alertas</h2>
-                          <div id="div_alerta" style="display: none;"></div>
-                          <b>Umidade Máxima: 80% | Umidade Mínima: 60%</b>
+                            <h2>Alertas</h2>
+                            <div id="div_alerta" style="display: none"></div>
+                            <b>Umidade Máxima: 80% | Umidade Mínima: 60%</b>
                     </div>
                 </div>
             </div>
@@ -145,46 +144,298 @@
 </html>
 <script>
 
+    // FRONT-END COMEÇO:
 
-  function iniciar() {
-    var idEmpresa = sessionStorage.FK_EMPRESA;
-    var idPlant = Number(listaPlant.value)
-
-
-    function umidadeMaxima() {
-
-      fecth("/sensor/umiMax",{
-        method: "POST",
-        headers: {
-          "Content-type": "application/json"
-        },
-        body: JSON.stringify({
-          idEmpresaBD: idEmpresa,
-          idPlantBD: idPlant
-        })
-      }).then(function(resposta) {
-        if (resposta.ok) {
-          resposta.json().then(json => {
-            maiorUmidade.innerHTML = `${json.max}%`
-          })
-        } else {
-          maiorUmidade.innerHTML = `ERRO :(`
-        }
-      })
-
+    function mostrarGrafico() {
+        document.getElementById('graficos').style.display = 'flex';
     }
 
-    function umidadeMinima() {
+    function setGraficoDiario() {
+        document.getElementById('divGraficoDiario').style.display = 'flex';
+        document.getElementById('divGraficoMensal').style.display = 'none';
+    }
 
+    function setGraficoMensal() {
+        document.getElementById('divGraficoDiario').style.display = 'none';
+        document.getElementById('divGraficoMensal').style.display = 'flex';
+    }
+
+    // FRONT-END FIM.
+
+
+    // BACK-END COMEÇO:
+
+    var lista_plant = [];
+    var mes = [];
+    var valor_mes = [];
+    var umidade = [];
+    var dtHora = [];
+    let proximaAtualizacao;
+    let proximaAtualizacao2;
+    let kpiAtualizadaMax;
+    let kpiAtualizadaMin;
+
+    function listarPlant() {
+        var fkEmpresa = sessionStorage.FK_EMPRESA;
+
+        fetch("/plant/listarPlant", {
+        method: "POST",
+        headers: {
+        "Content-type": "application/json"
+        },
+        body: JSON.stringify({
+            fkEmpresa: fkEmpresa,
+        })
+        })
+        .then(function (resposta) {
+        resposta.json().then((plant) => {
+            plant.forEach((plant) => {
+            lista_plant.push(plant);
+
+            console.log("listaPlantasCadastradas")
+        });
+            atualizarSelectPlantacoes();
+        });
+        })
+        .catch(function (resposta) {
+        console.log(`#ERRO: ${resposta}`);
+        });
+    }
+
+    function atualizarSelectPlantacoes() {
+        var listaPlantElement = document.getElementById("listaPlant"); 
+
+
+        if (lista_plant.length > 0) {
+            lista_plant.forEach((plant) => {
+                var option = document.createElement("option");
+                option.value = plant.idPLANTACAO; 
+                option.textContent = plant.nome; 
+                listaPlantElement.appendChild(option);
+            });
+        } else {
+            var option = document.createElement("option");
+            option.value = "";
+            option.textContent = "Nenhuma plantação disponível";
+            listaPlantElement.appendChild(option);
+        }
+    }
+
+    function chamar() {
+        const valorSelecionado = listaPlant.value;
+        if (valorSelecionado == 1) {
+            graficoDiario();
+            graficoMensal();
+        } else {
+            graficoDiario();
+            graficoMensal();
+        }
     }
 
     function graficoDiario() {
+        var idPLANTACAO = Number(listaPlant.value);
 
+        fetch(`/sensor/graficoDiario`, {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+            idPLANTACAO: idPLANTACAO,
+        }),
+        })
+        .then((resposta) => {
+            resposta
+            .json()
+            .then((dados) => {
+                "";
+                umidade = [];
+                dtHora = [];
+                for (var i = 0; i < dados.length; i++) {
+                console.log(dados[i].dadoSensor, dados[i].dtRegistro);
+                umidade.push(dados[i].dadoSensor);
+                dtHora.push(dados[i].dtRegistro);
+                }
+                var umidadeReversa = umidade.reverse();
+                var dtHoraReversa = dtHora.reverse();
+
+                diario.data.datasets[0].data = umidadeReversa;
+                diario.data.labels = dtHoraReversa;
+                diario.update();
+
+                ultimaUmidade.innerHTML = `${umidade[umidade.length - 1]}%`
+            })
+            .catch((erro) => {
+                console.log(erro);
+            });
+        })
+        .catch((erro) => {
+            console.log(erro);
+        });
     }
 
     function graficoMensal() {
+        var idPLANTACAO = Number(listaPlant.value);
 
+
+        fetch(`/sensor/graficoMensal`, {
+        method: "POST",
+        headers: {
+        "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+            idPLANTACAO: idPLANTACAO,
+        }),
+        })
+        .then((resposta) => {
+        resposta
+        .json()
+        .then((dados) => {
+            "";
+            valor_mes = [];
+            mes = [];
+            for (var i = 0; i < dados.length; i++) {
+                console.log(dados[i].dadoSensor, dados[i].dtRegistro);
+                valor_mes.push(dados[i].media_valo);
+                mes.push(dados[i].Mes);
+            }
+            var ultima_posicao = umidade[0];
+            
+            var umidadeReversa = valor_mes;
+            var dtHoraReversa = mes;
+
+            mensal.data.datasets[0].data = umidadeReversa;
+            mensal.data.labels = dtHoraReversa;
+            mensal.update();
+        })
+            .catch((erro) => {
+            console.log(erro);
+        });
+        })
+        .catch((erro) => {
+        console.log(erro);
+        });
     }
-  }
+
+    function umidadeMaxima() {
+        var idEmpresa = sessionStorage.FK_EMPRESA;
+        var idPlant = Number(listaPlant.value);
+
+        fetch("/sensor/umiMax",{
+        method: "POST",
+        headers: {
+            "Content-type": "application/json"
+        },
+        body: JSON.stringify({
+            idEmpresa: idEmpresa,
+            idPlant: idPlant
+        })
+        }).then(function(resposta) {
+        if (resposta.ok) {
+            resposta.json().then(json => {
+            maiorUmidade.innerHTML = `${json.max}%`
+            })
+        } 
+        }).catch(function(error) {
+            console.error("Erro ao realizar fetch:", error);
+            maiorUmidade.innerHTML = `ERRO :(`;
+        });
+    }
+
+
+    function umidadeMinima() {
+
+        var idEmpresa = sessionStorage.FK_EMPRESA;
+        var idPlant = Number(listaPlant.value);
+
+            fetch("/sensor/umiMin",{
+            method: "POST",
+            headers: {
+                "Content-type": "application/json"
+            },
+            body: JSON.stringify({
+                idEmpresa: idEmpresa,
+                idPlant: idPlant
+            })
+            }).then(function(resposta) {
+            if (resposta.ok) {
+                resposta.json().then(json => {
+                menorUmidade.innerHTML = `${json.min}%`
+                })
+            }
+            }).catch(function(error) {
+                console.error("Erro ao realizar fetch:", error);
+                menorUmidade.innerHTML = `ERRO :(`;
+            });
+    }
+
+
+    function kpiMaxMin() {    
+        umidadeMaxima()
+        umidadeMinima()
+        atlKpi()
+    }
+
+    function atlGraficoDiario() {
+        proximaAtualizacao2 = setInterval(() => graficoDiario(), 3000);
+    }
+
+    function atlGraficoMensal() {
+        proximaAtualizacao = setInterval(() => graficoMensal(), 3000);
+    }
+
+    function atlKpi() {
+        kpiAtualizadaMax = setInterval(() => umidadeMaxima(), 3000);
+        kpiAtualizadaMin = setInterval(() => umidadeMinima(), 3000);
+    }
+
+
+    // BACK-END FIM
+
+
+
+    // Gráficos:
+
+    const diario = new Chart(document.getElementById("canvaGraficoDiario"), {
+    type: "line",
+    data: {
+        labels: dtHora,
+        datasets: [
+        {
+            label: "Umidade",
+            data: umidade,
+            borderWidth: 3,
+        },
+        ],
+    },
+    options: {
+        scales: {
+        y: {
+            beginAtMin: true,
+        },
+        },
+    },
+    });
+
+    const mensal = new Chart(document.getElementById("canvaGraficoMedia"), {
+    type: "bar",
+    data: {
+        labels: mes,
+        datasets: [
+        {
+            label: "Umidade",
+            data: valor_mes,
+            borderWidth: 1,
+        },
+        ],
+    },
+    options: {
+        scales: {
+        y: {
+            beginAtZero: true,
+        },
+        },
+    },
+    });
 
 </script>
